# saltoapis-dotnet

./: .bazelrc  .gitignore  BUILD  Dockerfile.build  LICENSE  MODULE.bazel  Makefile  README.md  WORKSPACE  csharp_metadata.bzl  rules.bzl  workspace_info.bzl
.github/workflows/: build.yml
scripts/: BUILD  nuget_deps.bzl  package.csproj.tmpl  release.bzl
src/Salto.Nebula.EmergencyKey.V1/: BUILD  EmergencyKey.cs  EmergencyKeyGrpc.cs
src/Saltoapis.Auth/: BUILD  SaltoapisAuthInterceptor.cs  SaltoapisClientCredentialsProvider.cs
src/Saltoapis.Auth.Tests/: BUILD  InterceptorTest.cs
src/Saltoapis.Longrunning.V1/: BUILD  Operation.cs  OperationGrpc.cs
src/Saltoapis.Nebula.AccessPoint.V1/: AccessPoint.cs  AccessPointGrpc.cs  BUILD
src/Saltoapis.Nebula.AccessPointGroup.V1/: AccessPointGroup.cs  AccessPointGroupGrpc.cs  BUILD
src/Saltoapis.Nebula.AccessRight.V1/: AccessRight.cs  AccessRightGrpc.cs  BUILD
src/Saltoapis.Nebula.Booking.V1/: BUILD  Booking.cs  BookingGrpc.cs
src/Saltoapis.Nebula.Calendar.V1/: BUILD  Calendar.cs  CalendarGrpc.cs
src/Saltoapis.Nebula.Controller.V1/: BUILD  Controller.cs  ControllerGrpc.cs
src/Saltoapis.Nebula.Destination.V1/: BUILD  Destination.cs  DestinationGrpc.cs
src/Saltoapis.Nebula.Device.V1/: BUILD  Device.cs  DeviceGrpc.cs  ElectronicLock.cs  ElectronicLockGrpc.cs  Encoder.cs  EncoderGrpc.cs  Extender.cs  ExtenderGrpc.cs  Gateway.cs  GatewayGrpc.cs
src/Saltoapis.Nebula.DigitalKey.V1/: BUILD  DigitalKey.cs  DigitalKeyGrpc.cs
src/Saltoapis.Nebula.ElectronicKey.V1/: BUILD  ElectronicKey.cs  ElectronicKeyGrpc.cs
(+63 files in other folders)
