# Dotnet rules
bazel_dep(name = "rules_dotnet", version = "0.14.0")

dotnet = use_extension("@rules_dotnet//dotnet:extensions.bzl", "dotnet")
dotnet.toolchain(dotnet_version = "8.0.100")
use_repo(dotnet, "dotnet_toolchains")

register_toolchains("@dotnet_toolchains//:all")

# Paket extension
paket2bazel_dependencies_extension = use_extension("//dotnet:paket.paket2bazel_dependencies_extension.bzl", "paket2bazel_dependencies_extension")
use_repo(paket2bazel_dependencies_extension, "paket.paket2bazel_dependencies")

# Nuget deps
# to update them modify the paket.dependencies file and run ./scripts/update-deps.sh
main_extension = use_extension("//:paket.main_extension.bzl", "main_extension")
use_repo(main_extension, "paket.main")

test_extension = use_extension("//:paket.test_extension.bzl", "test_extension")
use_repo(test_extension, "paket.test")
